# docs-fixing-assistant

./: .geminiignore  .gitignore  GEMINI.md  Makefile  pyproject.toml
.gemini/features/full_lifecycle/: 00-overview.md  01-classifier-agent.md  02-naming-agent.md  03-atomicity-agent.md  04-summarizer-agent.md  05-metadata-agent.md
.gemini/plans/migration/: phase_3_unified_api.md  phase_4_final_cleanup.md
.github/: CODEOWNERS  pull_request_template.md
src/api/: auth.py  config.py  dependencies.py  main.py
src/api/handlers/: error_handler.py
src/api/routes/: base.py  fixing.py  health.py  orchestration.py  pipeline.py  reordering.py  strategic.py
src/api/schemas/: error_schemas.py  llm_provider_schemas.py
src/domain/agents/: atomicity_agent.py  case_study_agent.py  content_agent.py  diagram_agent.py  flashcards_agent.py  matrix_agent.py  naming_agent.py  reordering_agent.py  tag_agent.py
src/domain/constants/: errors.py  golden_answers.py  system_prompts.py  users_prompts.py
src/domain/models/: agent.py  enums.py  error.py  llm_provider.py  llm_provider_model.py  message_model.py  state.py  state_model.py  tool_model.py
src/domain/orchestrator/: agent_registry.py  registry.py  tool_registry.py
src/domain/orchestrator/constants/: messages.py  system_prompts.py  user_prompts.py
src/domain/orchestrator/nodes/: agents_factory.py  atomicity_agent.py  base_node.py  base_worker.py  base_worker_node.py  planner_node.py  specialist_agents.py  supervisor_node.py  worker_factory.py
src/domain/ports/: agent.py  content_parser.py  embedder.py  file_system.py  file_system_port.py  graph_builder_port.py  llm_provider.py  node_port.py  tool.py  tool_port.py
src/domain/services/: evaluation_service.py  fixing_service.py  reordering_service.py  strategic_service.py
src/domain/tools/: contact_tool.py
src/domain/utils/: decorators.py  exceptions.py  json_parser.py  logging.py  response_parser.py  text_utils.py
src/infrastructure/adapters/config/: ollama.py
src/infrastructure/graph/: builder.py
src/infrastructure/llm_provider/: ollama_llm_provider.py
src/infrastructure/parsers/: base_parser.py  flashcards_parser.py  markdown_table_parser.py  mermeid_diagram_parser.py  tags_blocks_parser.py  text_parser.py  xml_parser.py
src/infrastructure/storage/: local_file_system_adapter.py  storage_mixin.py
src/infrastructure/tools/: delete_file_tool.py  list_files_tool.py  read_file_tool.py  write_file_tool.py
tests/: conftest.py  evaluation.py
tests/integration/: conftest.py
tests/integration/api/: test_orchestration_api_i.py
tests/integration/infrastructure/: test_atomicity_agent_i.py  test_base_node_i.py  test_classifier_agent_i.py  test_e2e_lifecycle_i.py  test_file_system_orchestration_i.py  test_ollama_llm_provider_i.py  test_planner_agent_i.py  test_supervisor_node_i.py  test_toolcall_import.py
tests/integration/workspace/: PLAN.md
tests/requirements/: 3.Value Calculation Techniques.md
tests/requirements/xml/: 0Initialrequirements.xml  1. PoC.xml  2. MVP.xml  4. RAGs.xml  5. Considerations.xml  6. Production Checklist.xml  7. Implementations.xml  8. Document.xml  consolidated.xml
tests/unit/infrastructure/: test_base_node_u.py  test_ollama_llm_provider_u.py  test_storage_tools_u.py  test_storage_u.py  test_supervisor_node_u.py
(+50 files in other folders)
